--- a/pages/cat.Optics & Design/gif-commander/index.html
+++ b/pages/cat.Optics & Design/gif-commander/index.html
@@ -137,7 +137,7 @@
       <div>
         <label for="gifQuality">🎞️ GIF Quality (1=best/large, 30=small/lossy)</label>
         <input type="range" id="gifQuality" min="1" max="30" value="10" />
-        <small id="gifQualityVal">10 (default)</small>
+        <small id="gifQualityVal">10 (higher=smaller file)</small>
       </div>
       <div>
         <label for="reduceColors">🎨 Reduce Colors (2-256, like FFmpeg palette; blank=auto)</label>
@@ -233,6 +233,10 @@
     let lastOutputUrl = null; // For cleanup
     let canceled = false; // For cancel button
 
+    // Global GIF worker cache
+    let gifWorkerUrl = null;
+    let gifWorkersEnabled = true;
+
     // Device capabilities probe
     const caps = {
       mediaRecorder: !!window.MediaRecorder,
@@ -243,6 +247,26 @@
     };
     const lowEnd = caps.deviceMemory <= 4;
     capsBanner.innerHTML = `WebM ${caps.vp9 ? 'VP9' : caps.vp8 ? 'VP8' : '❌'} | GIF ✅ | RAM: ${lowEnd ? 'Low (capped for stability)' : 'High'}`;
+
+    // Pre-fetch GIF worker at startup with timeout
+    async function preloadGifWorker() {
+      try {
+        status('Preloading GIF tools...');
+        const controller = new AbortController();
+        setTimeout(() => controller.abort(), 10000); // 10s timeout
+        const response = await fetch('https://cdn.jsdelivr.net/npm/gif.js@0.2.0/dist/gif.worker.js', { signal: controller.signal });
+        if (!response.ok) throw new Error('Fetch failed');
+        const blob = await response.blob();
+        gifWorkerUrl = URL.createObjectURL(blob);
+        status('Ready!');
+      } catch (err) {
+        console.warn('GIF worker preload failed:', err);
+        gifWorkersEnabled = false;
+        gifWorkerUrl = null;
+        status('GIF workers disabled (using single-thread mode—slower but stable).');
+      }
+    }
+    preloadGifWorker();
 
     // Presets
     const presets = {
@@ -465,28 +489,44 @@
       videoElement.__objectURL = videoUrl;
     };
 
-    function status(msg) { statusEl.textContent = msg; }
+    function status(msg) { 
+      statusEl.textContent = msg; 
+      console.log(msg); // For debugging
+    }
 
-    // Simple k-means for global palette (FFmpeg palettegen approx)
-    function generatePalette(bitmaps, maxColors) {
+    // Optimized k-means for global palette (with yielding and sampling)
+    async function generatePalette(bitmaps, maxColors) {
+      const sampleFrames = lowEnd ? Math.min(20, bitmaps.length) : Math.min(100, bitmaps.length);
       const allPixels = [];
-      bitmaps.slice(0, Math.min(100, bitmaps.length)).forEach(bm => { // Sample first 100 frames for speed
+      const maxPixels = lowEnd ? 500000 : 1000000; // Cap to prevent OOM
+
+      status('Sampling pixels for palette...');
+      for (let f = 0; f < sampleFrames; f++) {
+        if (canceled) throw new Error('Canceled');
+        const bm = bitmaps[f];
         const canvas = document.createElement('canvas');
         canvas.width = bm.width; canvas.height = bm.height;
         const ctx = canvas.getContext('2d');
         ctx.drawImage(bm, 0, 0);
         const imageData = ctx.getImageData(0, 0, bm.width, bm.height);
         const data = imageData.data;
-        for (let i = 0; i < data.length; i += 4) {
+        const step = Math.max(1, Math.floor(data.length / 4 / (maxPixels / sampleFrames))); // Subsample
+        for (let i = 0; i < data.length; i += 4 * step) {
           allPixels.push([data[i], data[i+1], data[i+2]]); // RGB only
+          if (allPixels.length >= maxPixels) break;
         }
-      });
+        if (f % 10 === 0) await new Promise(requestAnimationFrame); // Yield
+        if (allPixels.length >= maxPixels) break;
+      }
+      prog.value = 10;
 
-      // Simplified k-means (init random centroids, iterate 5x)
+      // Simplified k-means (init random centroids, iterate 3x for speed)
       let centroids = allPixels.slice(0, maxColors).map(p => [...p]);
-      for (let iter = 0; iter < 5; iter++) {
+      for (let iter = 0; iter < 3; iter++) {
+        if (canceled) throw new Error('Canceled');
         const clusters = Array(maxColors).fill().map(() => []);
-        allPixels.forEach(pixel => {
+        allPixels.forEach((pixel, idx) => {
+          if (idx % 10000 === 0) await new Promise(requestAnimationFrame); // Yield during clustering
           const dists = centroids.map(c => Math.hypot(...pixel.map((v, i) => v - c[i])));
           const closest = dists.indexOf(Math.min(...dists));
           clusters[closest].push(pixel);
@@ -496,19 +536,23 @@
           const sums = cluster.reduce((acc, p) => acc.map((s, i) => s + p[i]), [0,0,0]);
           return sums.map(s => Math.round(s / cluster.length));
         });
+        status(`Palette iteration ${iter + 1}/3...`);
       }
+      prog.value = 15;
       return centroids;
     }
 
-    // Quantize frame to palette
-    function quantizeFrame(bitmap, palette, outW, outH) {
+    // Quantize frame to palette (batched with yields)
+    async function quantizeFrame(bitmap, palette, outW, outH) {
       const canvas = document.createElement('canvas');
       canvas.width = outW; canvas.height = outH;
       const ctx = canvas.getContext('2d');
       drawFrame(ctx, bitmap, outW, outH, scaleModeEl.value); // Apply scaling first
       const imageData = ctx.getImageData(0, 0, outW, outH);
       const data = imageData.data;
+      const batchSize = 10000; // Process in batches
       for (let i = 0; i < data.length; i += 4) {
+        if (canceled) throw new Error('Canceled');
         const rgb = [data[i], data[i+1], data[i+2]];
         const closest = palette.reduce((best, p, idx) => {
           const dist = Math.hypot(...rgb.map((v, j) => v - p[j]));
@@ -517,9 +561,10 @@
         data[i] = palette[closest.idx][0];
         data[i+1] = palette[closest.idx][1];
         data[i+2] = palette[closest.idx][2];
+        if (i % batchSize === 0) await new Promise(requestAnimationFrame); // Yield
       }
       ctx.putImageData(imageData, 0, 0);
-      return canvas;
+      return createImageBitmap(canvas);
     }
 
     async function loadBitmaps() {
@@ -658,11 +703,9 @@
       if (!bitmaps.length) await loadBitmaps();
       if (typeof GIF === 'undefined') { alert('GIF library failed to load.'); return; }
       try {
-        status("Loading GIF worker…");
-        const workerResponse = await fetch('https://cdn.jsdelivr.net/npm/gif.js@0.2.0/dist/gif.worker.js');
-        if (!workerResponse.ok) throw new Error('Worker fetch failed');
-        const workerBlob = await workerResponse.blob();
-        const workerURL = URL.createObjectURL(workerBlob);
+        if (!gifWorkerUrl) {
+          throw new Error('GIF tools not ready—network issue? Try WebM or refresh page.');
+        }
 
         const fps = getEffectiveFps();
         const inputDuration = parseFloat(durationEl.value);
@@ -676,35 +719,41 @@
         else if (outW && !outH) { outH = Math.round(naturalH * (outW / naturalW)); }
         else if (!outW && outH) { outW = Math.round(naturalW * (outH / naturalH)); }
         const gifQual = Math.max(1, parseInt(gifQualityEl.value, 10) || 10);
-        const maxColors = lowEnd ? Math.min(64, parseInt(reduceColorsEl.value, 10) || 64) : parseInt(reduceColorsEl.value, 10) || 128;
+        let maxColors = lowEnd ? Math.min(64, parseInt(reduceColorsEl.value, 10) || 64) : parseInt(reduceColorsEl.value, 10) || 128;
         const optimize = gifOptimizeEl.checked;
         const dither = gifDitherEl.value;
+
+        // Disable palette on low-end + many frames
+        const usePalette = maxColors < 256 && !(lowEnd && bitmaps.length > 100);
+        if (!usePalette) maxColors = 256;
 
         const framesToUse = Math.min(totalFrames, bitmaps.length);
         const frameDelay = Math.round(1000 / fps);
         const estSizeKB = Math.round(framesToUse * outW * outH / 10000 / (31 - gifQual)); // Rough heuristic
 
         let processedFrames = bitmaps.slice(0, framesToUse);
-        if (maxColors < 256) {
+        if (usePalette) {
           status(`Building global palette (${maxColors} colors) for better compression…`);
-          const palette = generatePalette(bitmaps, maxColors);
+          const palette = await generatePalette(bitmaps, maxColors);
           status(`Quantizing ${framesToUse} frames to palette…`);
-          processedFrames = await Promise.all(processedFrames.map(async (bm, i) => {
+          processedFrames = [];
+          for (let i = 0; i < framesToUse; i++) {
             if (canceled) throw new Error('Canceled');
-            if (i % 10 === 0) await new Promise(requestAnimationFrame);
-            const quantizedCanvas = quantizeFrame(bm, palette, outW, outH);
-            return createImageBitmap(quantizedCanvas);
-          }));
-          prog.value = 20;
+            const quantizedBm = await quantizeFrame(bitmaps[i], palette, outW, outH);
+            processedFrames.push(quantizedBm);
+            if (i % 5 === 0) await new Promise(requestAnimationFrame);
+            prog.value = 15 + Math.round((i / framesToUse) * 5);
+          }
         }
+        prog.value = usePalette ? 20 : 0;
 
         status(`Generating GIF… (q=${gifQual}, ${framesToUse} frames @ ${fps} fps, ~${estSizeKB}KB est, duration: ${duration.toFixed(1)}s)`);
         const gif = new GIF({
-          workers: Math.min(4, caps.hardwareConcurrency),
+          workers: gifWorkersEnabled ? Math.min(4, caps.hardwareConcurrency) : 1,
           quality: gifQual,
           width: outW,
           height: outH,
-          workerScript: workerURL,
+          workerScript: gifWorkerUrl,
           background: '#000000',
           repeat: loop ? 0 : -1,
           optimize: optimize,
@@ -719,34 +768,33 @@
           if (canceled) throw new Error('Canceled');
           if (i % 30 === 0) await new Promise(requestAnimationFrame);
           const frameIdx = loop ? (i % bitmaps.length) : i;
-          const frameBm = processedFrames[frameIdx % processedFrames.length];
+          const frameBm = processedFrames.length ? processedFrames[frameIdx % processedFrames.length] : bitmaps[frameIdx];
           tempCtx.clearRect(0, 0, outW, outH);
           drawFrame(tempCtx, frameBm, outW, outH, scaleModeEl.value);
           gif.addFrame(tempCanvas, { delay: frameDelay, copy: true });
-          prog.value = 20 + Math.round((i / framesToUse) * 50);
+          prog.value = (usePalette ? 20 : 0) + Math.round((i / framesToUse) * 50);
         }
 
         // Cleanup processed frames
-        processedFrames.forEach(bm => bm.close?.());
+        if (processedFrames.length) processedFrames.forEach(bm => bm.close?.());
 
         gif.on('finished', blob => {
           const url = URL.createObjectURL(blob);
           showPreview('gif', url);
           lastOutputType = 'gif';
-          URL.revokeObjectURL(workerURL);
           cleanupBitmaps();
           prog.value = 100;
-          status(`GIF done (q=${gifQual}, ${maxColors} colors) @ ${fps} fps. ${(blob.size/1024/1024).toFixed(2)} MB`);
+          status(`GIF done (q=${gifQual}, ${usePalette ? maxColors + ' colors' : 'auto'}) @ ${fps} fps. ${(blob.size/1024/1024).toFixed(2)} MB`);
         });
 
         gif.on('progress', p => { 
-          prog.value = 70 + Math.round(p * 30); 
+          prog.value = (usePalette ? 70 : 50) + Math.round(p * 30); 
         });
         gif.render();
       } catch (err) {
         if (err.message === 'Canceled') return;
         console.error(err);
-        status("GIF Error: " + (err && err.message ? err.message : err));
+        status("GIF Error: " + (err && err.message ? err.message : err) + " (Try WebM?)");
       } finally {
         cancelBtn.style.display = 'none';
         canceled = false;
